Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🍔 Da Família Lanches</title>
-  <link rel="stylesheet" href="style.css" />
+  
+  <link rel="stylesheet" href="style.css?v=1.1" />
+  
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -47,11 +49,15 @@
     <div class="carousel">
       <button class="c-btn c-prev" type="button" aria-label="Anterior">‹</button>
       <div class="slides">
-        <img class="slide" src="promocoes/promo1.jpg" data-wa="Promoção 1 imperdível! 🍔" />
-        <img class="slide" src="promocoes/promo2.jpg" data-wa="Promoção 2 exclusiva! 🌭" />
-        <img class="slide" src="promocoes/promo3.jpg" data-wa="Promoção 3 só hoje! 🥤" />
-        <img class="slide" src="promocoes/promo4.jpg" data-wa="Promoção 4 da casa! 🍟" />
-        <img class="slide" src="promocoes/promo5.jpg" data-wa="Promoção 5 sensacional! 🔥" />
+        <img class="slide" src="promocoes/promo1.jpg" data-wa="Quero essa Promoção 1 imperdível! 🍔" />
+        <img class="slide" src="promocoes/promo2.jpg" data-wa="Não vou perder! Quero a Promoção 2 exclusiva! 🌭" />
+        <img class="slide" src="promocoes/promo3.jpg" data-wa="Me vê a Promoção 3, só hoje! 🥤" />
+        <img class="slide" src="promocoes/promo4.jpg" data-wa="Quero a Promoção 4 da casa! 🍟" />
+        <img class="slide" src="promocoes/promo5.jpg" data-wa="Sensacional! Quero a Promoção 5! 🔥" />
+        <img class="slide" src="promocoes/promo6.jpg" data-wa="Opa! Quero a Promoção 6, antes que acabe! 🏃‍♂️" />
+        <img class="slide" src="promocoes/promo7.jpg" data-wa="Essa é minha! Quero a Promoção 7! 🤩" />
+        <img class="slide" src="promocoes/promo8.jpg" data-wa="Quero a Promoção 8, por favor! ✨" />
+        <img class="slide" src="promocoes/promo9.jpg" data-wa="Uau! Quero a Promoção 9 agora! 😋" />
       </div>
       <button class="c-btn c-next" type="button" aria-label="Próximo">›</button>
     </div>
