--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   <div id="cookie-banner">
     <p>
       Usamos cookies para garantir que você tenha a melhor experiência em nosso site.
-      <a href="Politica-privacidade.html" target="_blank">Saiba mais</a>.
+      <a href="politica-privacidade.html" target="_blank">Saiba mais</a>.
     </p>
     <button id="cookie-accept" type="button">Aceitar</button>
   </div>
